# vscode-vcpkg-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp
